--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Resume - Uziel Carpio Villanueva</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Resumen</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Uziel
             <span class="text-primary">Carpio</span>
           </h1>
-          <div class="subheading mb-5">Ñaña Lima Peru Dir. Urb (51) 988758376·
+          <div class="subheading mb-5">Ñaña Lima Peru tel. (51) 988758376
             <a href="uzielc18@gmail.com">uzielc18@gmail.com</a>
           </div>
           <p class="mb-5">Desarrollador de aplicaciones informáticas, acorde con las nuevas tendencias en programación y desarrollo web. Interesado en crear soluciones integrales para empresas y llevarlas del mundo analógico al digital</p>
@@ -124,48 +124,69 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Programador</h3>
-              <div class="subheading mb-3">Ideas TM</div>
-              <p>Desarrollo de Paginas Web y aplicaciones en entorno web</p>
+              <div class="subheading mb-3">Universidad Peruana Union - Patmos </div>
+              <p>Desarrollando la app version 2.0 de Proesad</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">Febrero 2018 - Al presente</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Programador</h3>
+              <div class="subheading mb-3">Universidad Peruana Union</div>
+              <p>programador de las aplicaciones utilizadas en la universidad en el proyecto ERP Modulo de admision</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Marzo 2016 - Febrero 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Docente</h3>
+              <div class="subheading mb-3">Universidad Peruana Union</div>
+              <p>Profesor del curso Informática en la carrera de Educación Primaria para la facultad de FACIHED</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Marzo 2015 - Diciembre 2015</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Docente</h3>
+              <div class="subheading mb-3">Universidad Peruana Union</div>
+              <p>Docente adjunto del curso Tecnologías de la información aplicadas a la educación - en la UPeU-FACIHED</p>
+              <p>Docente del Curso Diseño Web del tercer cilo en la carrera profesional técnica Diseño Gráfico de la UPeU-FACIHED.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Marzo 2014 - Diciembre 2014</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <div class="subheading mb-3">Universidad Peruana Union</div>
               <p>Desarrollo de la estructura y base de datos.
                 - Desarrollo de un red social para la universidad.
-- Desarrollo del sistema de actas.
-- Desarrollo del ACL para las aplicaciones.
-- Aportes y modificaciones a CHAMILO (Colegio UNIÓN)</p>
+                - Desarrollo del sistema de actas.
+                - Desarrollo del ACL para las aplicaciones.
+                - Aportes y modificaciones a CHAMILO (Colegio UNIÓN)</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">Agosto 2011 - Diciembre 2011</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Programador</h3>
+              <div class="subheading mb-3">Ideas TM</div>
+              <p>Desarrollo de Paginas Web y aplicaciones en entorno web</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">March 2010 - Present</span>
             </div>
           </div>
 
@@ -179,24 +200,24 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Tec. Informática Empresarial</h3>
+              <div class="subheading mb-3">Tecnica</div>
+              <div>Universidad Peruana Union</div>
+              <p>---</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">Marzo 2007 - Diciembre 2011</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Colegio Adventista 28 de Julio</h3>
+              <div class="subheading mb-3">Secundaria</div>
+              <p>---</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">August 1995 - May 2002</span>
             </div>
           </div>
 
@@ -222,10 +243,13 @@
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
+              <i class="devicons devicons-angular"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicons devicons-php"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
@@ -234,74 +258,43 @@
               <i class="devicons devicons-wordpress"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
+              <i class="c devicons-gulp"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-npm"></i>
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Trabajos</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Web, Responsive Design</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Pruebas Browser Testing &amp; Debugging</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Trabajo en equipo</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Desarrollo Agil &amp; Scrum</li>
           </ul>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <h2 class="mb-5">Intereses</h2>
+          <p>Además de ser un desarrollador web, disfruto la mayor parte de mi tiempo al aire libre. Caminatas, paseos.</p>
+          <p class="mb-0">Cuando me obligan a ir al cine, me gustan las peliculas de ciencia ficción y de fantasía, soy una aspirante a chef y paso una gran parte de mi tiempo libre explorando los últimos avances tecnológicos en el mundo del desarrollo web.</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
+          <h2 class="mb-5">Mas de mi</h2>
+          
         </div>
       </section>
 
