formulario de google

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Intereses</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contacto">Contacto</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Fotos</a>
           </li>
@@ -300,19 +304,31 @@
           <p class="mb-0">Cuando me obligan a ir al cine, me gustan las peliculas de ciencia ficción y de fantasía, soy una aspirante a chef y paso una gran parte de mi tiempo libre explorando los últimos avances tecnológicos en el mundo del desarrollo web.</p>
         </div>
       </section>
-
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contacto">
+        <div class="row">
+          <div class="col-md-12">
+               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScnTXOw82AMGbSwh3zolWCfLBQIJT16C7SHypGgLROFybzaAg/viewform?embedded=true" width="100%" height="1700px" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+            </div>
+          </div>
+      </section>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Mas de mi</h2>
-          <div id="fb-root"></div>
-          <script>(function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.1&appId=245832229392078&autoLogAppEvents=1';
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));</script>
-          <div class="fb-page" data-href="https://www.facebook.com/sextetoesshad/" data-tabs="timeline" data-width="500" data-height="700" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/sextetoesshad/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/sextetoesshad/">Ministerio de Musica Esshad</a></blockquote></div>
+          <div class="row">
+            <div class="col-md-12">
+              <div id="fb-root"></div>
+              <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.1&appId=245832229392078&autoLogAppEvents=1';
+                fjs.parentNode.insertBefore(js, fjs);
+              }(document, 'script', 'facebook-jssdk'));</script>
+              <div class="fb-page" data-href="https://www.facebook.com/sextetoesshad/" data-tabs="timeline" data-width="500" data-height="700" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/sextetoesshad/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/sextetoesshad/">Ministerio de Musica Esshad</a></blockquote></div>
+            </div>
+            
+          </div>
+
         </div>
       </section>
 
