--- a/felizdia.html
+++ b/felizdia.html
@@ -15,8 +15,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta property="og:title" content="Feliz día del maestro" />
+    <meta property="og:description" content="Todos los dias a tu lado son únicos" />
+    <meta property="og:image" content="http://uzielcarpio.com/img/001.jpg" />      
+    <meta property="og:url" content="http://uzielcarpio.com" />
 
     <title>Feliz día del maestro Rosa Marin Rojas</title>
 
